--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app
     version="4.0"
+    <welcome-file-list>
+        <welcome-file> Template.html </welcome-file>
+        <welcome-file-list>
     xmlns="http://xmlns.jcp.org/xml/ns/javaee"
     xmlns:javaee="http://xmlns.jcp.org/xml/ns/javaee"
     xmlns:xml="http://www.w3.org/XML/1998/namespace"
